--- a/directory.html
+++ b/directory.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
-<html lang="eng-us">
+<html lang="en-us">
     <head>
         <meta charset = "utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Mai Manago">
         <meta name="description" content="Chamber of Commerce Koga Directory page">
-        <link rel="shortcuticon" href="images/cckoga.ico">
+        <link rel="shortcuticon" href="cckoga.ico">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
         <link rel="stylesheet" href="css/small.css">
         <link rel="stylesheet" href="css/medium.css">
@@ -45,7 +45,7 @@
             <img src="https://img.icons8.com/material-outlined/24/000000/view-module.png" alt="gridview icon">
             </div>
             <div class="listview">
-                <img src="https://img.icons8.com/material-outlined/24/000000/list.png"/ alt="listview icon">
+                <img src="https://img.icons8.com/material-outlined/24/000000/list.png" alt="listview icon">
             </div>
             </div>
             </div>
