--- a/thanks.html
+++ b/thanks.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
-<html lang="eng-us">
+<html lang="en-us">
     <head>
         <meta charset = "utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Mai Manago">
         <meta name="description" content="Chamber of Commerce Koga Website Home">
-        <link rel="shortcuticon" href="images/cckoga.ico">
+        <link rel="shortcuticon" href="cckoga.ico">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
         <link rel="stylesheet" href="css/small.css">
         <link rel="stylesheet" href="css/medium.css">
