--- a/contact.html
+++ b/contact.html
@@ -88,9 +88,10 @@
         <div class="board">
         <div class="directory2"></div>
     </div>
+    </div>
 
         <h2>City Map</h2>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d53096.9162027062!2d130.4682725583145!3d33.72040344990242!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x35418785e2b45fe9%3A0xff05e0924e1d9136!2sKoga%2C%20Fukuoka!5e0!3m2!1sen!2sjp!4v1626241542704!5m2!1sen!2sjp" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d53096.9162027062!2d130.4682725583145!3d33.72040344990242!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x35418785e2b45fe9%3A0xff05e0924e1d9136!2sKoga%2C%20Fukuoka!5e0!3m2!1sen!2sjp!4v1626241542704!5m2!1sen!2sjp" width="960" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
    
     </main>
     <footer>
